# NumSim

./: .gitignore  .project  CMakeLists.txt  Datenvergleiche.docx  NumSim Projekt.pptx  NumSim Projekt_Henrik.pptx  Project.cbp  README.md  UML_Coarser.uxf  UML_Cycle.uxf  UML_EndSolver.uxf  UML_Multigrid.uxf  UML_NumSim.uxf  UML_NumSim_structure.uxf  UML_NumSim_structure_complete.uxf  UML_NumSim_truncate.uxf  UML_Smoother.uxf  backwardfacingstep.input  backwardfacingstep_20x4.geom  bfs.input  cprun.sh  karmanvortex.input  karmanvortex_parabola_50x10.geom  kv.input  kvp.input  lcf.input  ldc.input  ldch.input  ldch_ref.input  lid_driven_cavity.txt  lid_driven_cavityMG.txt  lid_driven_cavity_hot.txt  lid_driven_hot_test.txt  lid_driven_supertest.txt  liddriven_cavity_20x20.geom  liddriven_cavity_heat_10x10.geom  liddriven_cavity_heat_re316_ri10.input  naturalconvection_10x10.geom  nc1.input  nc2.input  (+7 more)
SolidSolverDummy/: SolidSolverDummy  solidsolverdummy.cpp
backwardfacingstep(2)/: backwardfacingstep.input
compare_output_temperature/: main.cpp
ex3_test_cases/: channelflow_fh.input  liddriven_cavity_heat_5x5.geom  liddrivencavity_obstacle.input  (+2 more)
src/: Adapter.cpp  Adapter.h  Array2D.cpp  Array2D.h  CMakeLists.txt  CentralDifferences.cpp  CentralDifferences.h  Coarser.h  Coarser2.cpp  Coarser2.h  CoarserDefault.cpp  CoarserDefault.h  CoarserLinear.cpp  CoarserLinear.h  Computation.cpp  Computation.h  ComputationParallel.cpp  ComputationParallel.h  Cycle.h  Discretization.cpp  Discretization.h  DonorCell.cpp  DonorCell.h  DonorCellParallel.h  ESGaussSeidel.cpp  ESGaussSeidel.h  EndSolver.cpp  EndSolver.h  EndSolverNone.h  FieldVariable.cpp  FieldVariable.h  GaussSeidel.cpp  GaussSeidel.h  GaussSeidelRedBlack.cpp  GaussSeidelRedBlack.h  Jacobi.h  MGGaussSeidel.cpp  MGGaussSeidel.h  MGGrid.cpp  MGGrid.h  (+32 more)
src/output_writer/: output_writer.cpp  output_writer.h  output_writer_paraview.cpp  output_writer_paraview.h  output_writer_paraview_parallel.cpp  output_writer_paraview_parallel.h  output_writer_text.cpp  output_writer_text.h  output_writer_text_parallel.h
(+3086 files in other folders)
